# python-seed-v2

./: .gitignore  Makefile  README.md  VERSION  pyproject.toml
.github/workflows/: pipeline.yml
docs/: index.md  requirements.txt
src/config/: .env.secrets  settings.py
