[project]
name = "python-seed-v2"
version = "0.1.0"
description = "A Python project seed with modern tooling."
authors = [{name="Joaquin Gonzalez", email= "<jgonzalez@gmail.com>"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "coverage>=7.8.0",
    "coveralls>=4.0.1",
    "fastapi>=0.109.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.3",
    "markdown>=3.5.2",
    "markupsafe>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material[doc]>=9.6.14",
    "mkdocstrings[python]>=0.25.2",
    "mypy>=1.8.0",
    "pydantic>=2.5.3",
    "pytest>=7.4.4",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "ruff>=0.11.10",
    "uvicorn>=0.27.0",
]

[tool.ruff]
line-length = 95
exclude = [".git", "__pycache__", "docs/source/conf.py", "build", "dist"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D401",
    "E203",
    "N802",
    "N806",
    "N812",
    "S311",
    "S605",
    "S607",
    "ISC003",
    "ISC001",
    "F541",
    "F401",
    "F821",
]
per-file-ignores = { "__init__.py" = ["F401", "F403"] }

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

